--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ project(OpenAlgorithmLibrary)
 cmake_minimum_required(VERSION 2.8)
 
 if(UNIX)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x -O1")
-    #at the end -O3 (level of optimization 3) and
-    #-g0 (no debug information) has to be used
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x -O3") #-g0")
+    #-O3 (level of optimization 3)
+    #-g0 (no debug information)
+    #disable all output by commenting out #define OUTPUT
 endif()
 
 set(headers
@@ -13,14 +14,16 @@ set(headers
   heapsort.h
   mergesort.h
   quicksort.h
+  shellsort.h
+  swap.h
+  randomstring.h
 )
 set(sources
   main.cpp
+  randomstring.cpp
 )
 
 add_executable(${PROJECT_NAME} ${headers} ${sources})
 
-
 #NOTES:
-# www.stoimen.com/blog/2012/02/13/computer-algorithms-insertion-sort
-
+# http://algs4.cs.princeton.edu/23quicksort/
