--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 project(OpenAlgorithmLibrary)
 cmake_minimum_required(VERSION 2.8)
 
+# For the final build use -DCMAKE_BUILD_TYPE=Release
 if(UNIX)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x -O3") #-g0")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x -O3 -g0")
     #-O3 (level of optimization 3)
     #-g0 (no debug information)
     #disable all output by commenting out #define OUTPUT
@@ -24,6 +25,3 @@ set(sources
 )
 
 add_executable(${PROJECT_NAME} ${headers} ${sources})
-
-#NOTES:
-# http://algs4.cs.princeton.edu/23quicksort/
